v0.0.10,  2019-02-05 -- frequency tables in MESA samples now in stored in record
                        arrays using same keys as MESA
v0.0.9,   2018-09-24 -- should fix bugs in gzip support in v0.0.8 
v0.0.8,   2018-09-21 -- Some functions now automagically read gzipped files
                        ending `.gz.`.
                     -- `fgong_` and `amdl_get` now return single keys in the
                        same form as requested.
v0.0.7,   2018-05-30 -- Improvements to GYRE file manipulation.
v0.0.6,   2018-05-03 -- Renamed IO module to FGONG.
v0.0.5,   2018-03-02 -- Bugfix in integrate.  Also added test and improved
                        fgong/amdl_get.
v0.0.4,   2018-02-10 -- Multiple improvements: functionality, tests,
                        documentation...
v0.0.3,   2017-11-08 -- First PyPI version, documentation on ReadTheDocs.
v0.0.2,   2017-05-09 -- Code finally stable, first "release candidate".
v0.0.1,   2016-11-17 -- Initial commit.